--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,14 @@ br {
   padding: 35px 20px;
 }
 
+.mcard-header{
+  padding:.75rem 1.25rem;
+  margin-bottom:0;
+  background-color:#fff;
+  color:#54a0ff;
+  border-bottom:1px solid #0097e6
+}
+
 @media (min-width: 768px) {
   .modal-xl {
     width: 90%;
