--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,8 @@
-@font-face {
-    font-family: 'Raleway', sans-serif;
-    src: url(fonts/Raleway-Regular.ttf);
-}
-
-html{
-    overflow-x: hidden;
-    font-family: 'Raleway', sans-serif;
-}
-
-.button2 {
-    background-color: white;
-    color: #54a0ff;
-    border: 2px solid #54a0ff;
-}
-
-.button2:hover {
-    background-color: #54a0ff;
-    color: white;
-}
-
-.card {
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-}
-
-.logo {
-    color: #54a0ff;
-}
-
-.mlogo {
-    color: #FFF;
-}
+.button2{background-color: white;color: #54a0ff;border: 2px solid #54a0ff;}
+.button2:hover {background-color: #54a0ff;color: white;}
+.card {box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);}
+.logo {color: #54a0ff;}
+.mlogo {color: #FFF;}
 
 hr.style1{
 	border-top: 1px solid #FFF;
@@ -37,15 +10,6 @@ hr.style1{
 
 hr.style2{
 	border-top: 1px solid #54a0ff;
-}
-
-br {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-
-  -o-user-select: none;
-  user-select: none;
 }
 
 .bgtype1{
@@ -58,11 +22,4 @@ br {
   background-color: #54a0ff;
   color: #FFF;
   padding: 35px 20px;
-}
-
-@media (min-width: 768px) {
-  .modal-xl {
-    width: 90%;
-   max-width:1200px;
-  }
 }
