--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,12 @@
+@font-face {font-family: 'Raleway', sans-serif;src: url(fonts/Raleway-Regular.ttf);}
+html{overflow-x: hidden;font-family: 'Raleway', sans-serif;}
+br{-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;-o-user-select: none;user-select: none;}
+@media (min-width: 768px) {.modal-xl {width: 90%;max-width:1200px;}}
 .button2{background-color: white;color: #54a0ff;border: 2px solid #54a0ff;}
 .button2:hover {background-color: #54a0ff;color: white;}
-.card {box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);}
 .logo {color: #54a0ff;}
 .mlogo {color: #FFF;}
-
-hr.style1{
-	border-top: 1px solid #FFF;
-}
-
-hr.style2{
-	border-top: 1px solid #54a0ff;
-}
-
-.bgtype1{
-  background-color: #FFF;
-  color: #54a0ff;
-  padding: 35px 20px;
-}
-
-.bgtype2{
-  background-color: #54a0ff;
-  color: #FFF;
-  padding: 35px 20px;
-}
+hr.style1{border-top: 1px solid #FFF;}
+hr.style2{border-top: 1px solid #54a0ff;}
+.bgtype1{background-color: #FFF;color: #54a0ff;padding: 35px 20px;}
+.bgtype2{background-color: #54a0ff;color: #FFF;padding: 35px 20px;}
